<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.dev.mendes.android_mytasks.fragment.TaskDetailFragment"
android:background="@color/colorGrey"
android:orientation="vertical">

<LinearLayout
    android:id="@+id/layout_header"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:background="@color/colorWhite"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_normal"
        android:layout_marginTop="65dp"
        android:layout_weight="0.03"
        android:inputType="textCapSentences"
        android:text="@string/list_example"
        android:textColor="@color/colorText"
        android:textSize="24sp" />


</LinearLayout>

<LinearLayout
    android:id="@+id/layout_cardPlace"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="180dp"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="@dimen/material_normal"
        android:layout_marginTop="@dimen/material_big"
        android:src="@drawable/ic_local"
        android:tint="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_normal"
        android:layout_marginTop="@dimen/material_big"
        android:text="@string/task_place"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

</LinearLayout>

<LinearLayout
    android:id="@+id/layout_cardDate"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="240dp"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="@dimen/material_normal"
        android:layout_marginTop="@dimen/material_big"
        android:src="@drawable/ic_calendar"
        android:tint="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_normal"
        android:layout_marginTop="@dimen/material_big"
        android:text="@string/task_date"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

</LinearLayout>

<LinearLayout
    android:id="@+id/layout_cardTime"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginTop="300dp"
    android:background="@color/colorWhite"
    android:orientation="horizontal">


    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="@dimen/material_normal"
        android:layout_marginTop="@dimen/material_big"
        android:src="@drawable/ic_pencil"
        android:tint="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_normal"
        android:layout_marginTop="@dimen/material_big"
        android:text="@string/task_note"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

</LinearLayout>


</RelativeLayout>
