<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.mendes.android_mytasks.TaskListActivity"
    android:background="@color/colorGrey"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="60dp" />

        <TextView
            android:id="@+id/tv_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="65dp"
            android:layout_weight="0.03"
            android:ems="10"
            android:inputType="textCapSentences"
            android:text="@string/list_example"
            android:textColor="@color/colorText"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_cardPlace"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_local"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/task_place"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_cardDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_calendar"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/task_date"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_cardTime"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="300dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_pencil"
            android:tint="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/task_note"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>
